--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -46,10 +46,19 @@ under the License.
 
   <body class="<%= page_classes %>" data-languages="<%=h language_tabs.map{ |lang| lang.is_a?(Hash) ? lang.keys.first : lang }.to_json %>">
     <div class="header">
-      <nav class="navbar fixed-top">
+      <nav class="navbar navbar-expand-lg fixed-top">
         <a class="navbar-brand" href="#">
           <%= image_tag "propellerdevs.png", class: 'logo' %>
         </a>
+        <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
+          <ul class="navbar-nav ml-auto">
+            <a class="nav-item nav-link" href="#">API Reference</a>
+            <div class="divider"></div>
+            <a class="nav-item nav-link" href="#">Release Notes</a>
+            <div class="divider"></div>
+            <a class="nav-item nav-link" href="#">Tutorials</a>
+          </ul>
+        </div>
       </nav>
     </div>
     <div class="toc-wrapper">
